--- a/notebook/2. MODEL TRAINING.ipynb
+++ b/notebook/2. MODEL TRAINING.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "b080dfb2",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "ce2ade73",
    "metadata": {},
    "outputs": [
@@ -54,9 +54,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: xgboost in c:\\ds amruta\\inueroan\\end_to_end_mlproject\\venv\\lib\\site-packages (2.0.3)\n",
-      "Requirement already satisfied: numpy in c:\\ds amruta\\inueroan\\end_to_end_mlproject\\venv\\lib\\site-packages (from xgboost) (1.24.4)\n",
-      "Requirement already satisfied: scipy in c:\\ds amruta\\inueroan\\end_to_end_mlproject\\venv\\lib\\site-packages (from xgboost) (1.10.1)\n",
+      "Requirement already satisfied: xgboost in c:\\ds amruta\\inueroan\\mlproject_end_to_end\\venv\\lib\\site-packages (2.0.3)\n",
+      "Requirement already satisfied: numpy in c:\\ds amruta\\inueroan\\mlproject_end_to_end\\venv\\lib\\site-packages (from xgboost) (1.24.4)\n",
+      "Requirement already satisfied: scipy in c:\\ds amruta\\inueroan\\mlproject_end_to_end\\venv\\lib\\site-packages (from xgboost) (1.10.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "e11c6255",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "e7e412a2",
    "metadata": {},
    "outputs": [
@@ -204,7 +204,7 @@
        "4                    none          76             78             75  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "56d72fde",
    "metadata": {},
    "outputs": [],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "cd613177",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,7 @@
        "4                    none             78             75  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f237ea14",
    "metadata": {},
    "outputs": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "924b7f9d",
    "metadata": {},
    "outputs": [],
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "ffc69816",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "Name: math_score, Length: 1000, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "1e290fe3",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "9c68f99a",
    "metadata": {},
    "outputs": [],
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "72459f1d",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
        "(1000, 19)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -483,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "ed5c4e99",
    "metadata": {},
    "outputs": [
@@ -493,7 +493,7 @@
        "((800, 19), (200, 19))"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "8c247bd0",
    "metadata": {},
    "outputs": [],
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "79ccb8e7",
    "metadata": {
     "scrolled": false
@@ -578,13 +578,7 @@
       "- R2 Score: 0.8806\n",
       "===================================\n",
       "\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "\n",
       "K-Neighbors Regressor\n",
       "Model performance for Training set\n",
       "- Root Mean Squared Error: 5.7079\n",
@@ -605,22 +599,28 @@
       "- R2 Score: 0.9997\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 7.7801\n",
-      "- Mean Absolute Error: 6.1500\n",
-      "- R2 Score: 0.7513\n",
+      "- Root Mean Squared Error: 7.9095\n",
+      "- Mean Absolute Error: 6.2700\n",
+      "- R2 Score: 0.7429\n",
       "===================================\n",
       "\n",
-      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Random Forest Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 2.3030\n",
-      "- Mean Absolute Error: 1.8326\n",
-      "- R2 Score: 0.9765\n",
+      "- Root Mean Squared Error: 2.2901\n",
+      "- Mean Absolute Error: 1.8255\n",
+      "- R2 Score: 0.9767\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.0052\n",
-      "- Mean Absolute Error: 4.6168\n",
-      "- R2 Score: 0.8518\n",
+      "- Root Mean Squared Error: 5.9488\n",
+      "- Mean Absolute Error: 4.6264\n",
+      "- R2 Score: 0.8546\n",
       "===================================\n",
       "\n",
       "\n",
@@ -652,14 +652,14 @@
       "\n",
       "AdaBoost Regressor\n",
       "Model performance for Training set\n",
-      "- Root Mean Squared Error: 5.8877\n",
-      "- Mean Absolute Error: 4.8140\n",
-      "- R2 Score: 0.8462\n",
+      "- Root Mean Squared Error: 5.8600\n",
+      "- Mean Absolute Error: 4.7648\n",
+      "- R2 Score: 0.8477\n",
       "----------------------------------\n",
       "Model performance for Test set\n",
-      "- Root Mean Squared Error: 6.1482\n",
-      "- Mean Absolute Error: 4.7645\n",
-      "- R2 Score: 0.8447\n",
+      "- Root Mean Squared Error: 6.1193\n",
+      "- Mean Absolute Error: 4.7766\n",
+      "- R2 Score: 0.8461\n",
       "===================================\n",
       "\n",
       "\n"
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "e0159e5f",
    "metadata": {},
    "outputs": [
@@ -768,7 +768,7 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>Random Forest Regressor</td>\n",
-       "      <td>0.851801</td>\n",
+       "      <td>0.854570</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -778,7 +778,7 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>AdaBoost Regressor</td>\n",
-       "      <td>0.844661</td>\n",
+       "      <td>0.846116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -798,7 +798,7 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>Decision Tree</td>\n",
-       "      <td>0.751252</td>\n",
+       "      <td>0.742909</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -808,16 +808,16 @@
        "                Model Name  R2_Score\n",
        "2                    Ridge  0.880593\n",
        "0        Linear Regression  0.879046\n",
-       "5  Random Forest Regressor  0.851801\n",
+       "5  Random Forest Regressor  0.854570\n",
        "7    CatBoosting Regressor  0.851632\n",
-       "8       AdaBoost Regressor  0.844661\n",
+       "8       AdaBoost Regressor  0.846116\n",
        "6             XGBRegressor  0.827797\n",
        "1                    Lasso  0.825320\n",
        "3    K-Neighbors Regressor  0.783813\n",
-       "4            Decision Tree  0.751252"
+       "4            Decision Tree  0.742909"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -836,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "id": "9a6ad559",
    "metadata": {},
    "outputs": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "id": "eb557b0a",
    "metadata": {},
    "outputs": [
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "1e707ec3",
    "metadata": {},
    "outputs": [
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "7c9a8b48",
    "metadata": {},
    "outputs": [
@@ -1037,7 +1037,7 @@
        "[200 rows x 3 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
